objects/College__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>College_Type__c</fullName>
        <label>College Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deemed University</fullName>
                </value>
                <value>
                    <fullName>Affiliated University</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive Electronics.</fullName>
                </value>
                <value>
                    <fullName>Biomedical Instrumentation &amp; Devices.</fullName>
                </value>
                <value>
                    <fullName>Communication Engineering.</fullName>
                </value>
                <value>
                    <fullName>Control Engineering.</fullName>
                </value>
                <value>
                    <fullName>Digital Electronics.</fullName>
                </value>
                <value>
                    <fullName>Electrical and Electronics Engineering.</fullName>
                </value>
                <value>
                    <fullName>Electrical Engineering.</fullName>
                </value>
                <value>
                    <fullName>Electronics &amp; Communication Engineering.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Faculties__c</fullName>
        <label>No Of Faculties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Student1__c</fullName>
        <label>Student1</label>
        <referenceTo>Student1__c</referenceTo>
        <relationshipLabel>Colleges</relationshipLabel>
        <relationshipName>Colleges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>College</label>
    <nameField>
        <label>College Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colleges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>